fix on mobile

--- a/assets/css/responsive2.css
+++ b/assets/css/responsive2.css
@@ -88,7 +88,12 @@
         max-width: 130px;
     }
     .footer {
-        padding: 1rem;
+        padding: 2rem;
+    }
+    .verticle-po a,
+    .hori-po a {
+        text-decoration: none;
+        color: #d9d9d9;
     }
     .d-flex-desktop {
         display: grid;
